--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -2,96 +2,77 @@
   type: map
   contents:
     - name: Full Name
-      value: Albert Einstein
-    - name: Date of Birth
-      value: 14th March 1879
+      value: Your Full Name
     - name: Languages
-      value: English, German
+      value: English (IELTS 6.5, CET-6 553), Chinese (Native)
 
 - title: Education
   type: time_table
   contents:
-    - title: PhD
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1905
+    - title: BS in Automation
+      institution: University of Electronic Science and Technology of China
+      year: 2020-2024
       description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
-          contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Federal teaching diploma
-      institution: Eidgenössische Technische Hochschule, Zurich, Switzerland
-      year: 1900
-      description:
-        - Description 1.
-        - Description 2.
+        - Honored Research Degree & Outstanding Graduate
+        - "GPA: 3.99/4.0 (Rank: 2/278)"
+        - "Coursework: Math, Physics, Control Theory, Signal Processing, Machine Learning, Economics, Management, Robotics"
 
 - title: Experience
   type: time_table
   contents:
-    - title: Professor of Theoretical Physics
-      institution: Institute for Advanced Study, Princeton University
-      year: 1933 - 1955
+    - title: Research Assistant
+      institution: The Chinese University of Hong Kong
+      year: Nov 2024 - Present
       description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
-          contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Visiting Professor
-      institution: California Institute of Technology, Pasadena, California, US
-      year: 1933
+        - Constructed knowledge graph of Traditional Chinese Medicine
+        - Developed GraphRAG system for TCM retrieval and Q&A (Best Paper Award at BigCom25)
+        - Working on wearable ECG monitoring using cross-modal translation
+        - Researching info-limited unmixing via auto-regressiveness of LLM
+
+    - title: Research Assistant
+      institution: Hong Kong University of Science and Technology
+      year: July 2024 - Oct 2024
       description:
-        - Description 1.
-        - Description 2.
+        - Learned Visuo-Tactile Sensing and Signal Processing for Robot Manipulation
 
-    - title: Director
-      institution: Kaiser Wilhelm Institute for Physics, Berlin, Germany.
-      year: 1917-1933
-
-    - title: Professor of Theoretical Physics
-      institution: Karl-Ferdinand University, Prague, Czechoslovakia
-      year: 1911 - 1917
+    - title: International Exchange Student
+      institution: Nanyang Technological University, Singapore
+      year: Jan 2023 - Mar 2023
       description:
-
-    - title: Associate Professor of Theoretical Physics
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1909 - 1911
-
-- title: Open Source Projects
-  type: time_table
-  contents:
-    - title: <a href="https://github.com/alshedivat/al-folio">al-folio</a>
-      year: 2015-now
-      description: A beautiful, simple, clean, and responsive Jekyll theme for academics.
+        - Distinction Level (Top 10%)
+        - Realized fault diagnosis of cavitation using machine learning
+        - Applied time-series analysis to financial datasets
+        - Demonstrated end-to-end pipeline design
 
 - title: Honors and Awards
   type: time_table
   contents:
-    - year: 1921
+    - year: 2024
+      items: 
+        - Gratitude to Chinese Modern Scientists Scholarship (Top 0.2%, 20,000 CNY)
+        - China International College Students' Innovation Competition, Silver Award
+        - Trainee Engineer, China Instrument and Control Society
+    - year: 2022/2023
       items:
-        - Nobel Prize in Physics
-        - Matteucci Medal
-    - year: 2029
+        - National Scholarship (Twice, Top 0.6%)
+    - year: 2021/2022/2023
       items:
-        - Max Planck Medal
+        - Outstanding Undergraduate Award, UESTC
+    - year: 2022
+      items:
+        - International "Internet+" Innovation Competition, Gold Award
 
-- title: Academic Interests
+- title: Technical Skills
   type: nested_list
   contents:
-    - title: Topic 1.
+    - title: Programming Languages
       items:
-        - Description 1.
-        - Description 2.
-    - title: Topic 2.
+        - Python (PyTorch), Matlab, C/C++
+    - title: Software & Tools
       items:
-        - Description 1.
-        - Description 2.
-
-- title: Other Interests
-  type: list
-  contents:
-    - <u>Hobbies:</u> Hobby 1, Hobby 2, etc.
+        - Overleaf, Multisim, Auto CAD, ISAAC SIM
+        - Pybullet, OmniGibson
+    - title: Languages
+      items:
+        - English (IELTS 6.5, CET-6 553)
+        - Chinese (Native)
